added business majoy to resume section

--- a/resume.html
+++ b/resume.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -9,7 +9,6 @@
   </head>
   <body>
     <div class="mainpage">
-
       <nav class="slide-in-up">
         <div class="nav-container">
           <ul class="nav-menu">
@@ -23,7 +22,9 @@
               <a href="projects.html" class="nav-link">Projects</a>
             </li>
             <li class="nav-item">
-              <a href="project-details.html" class="nav-link">Project Details</a>
+              <a href="project-details.html" class="nav-link"
+                >Project Details</a
+              >
             </li>
             <li class="nav-item">
               <a href="contact.html" class="nav-link">Contact</a>
@@ -62,10 +63,14 @@
         <div class="grid-item resume-education slide-in-right delay-2">
           <h2>Education</h2>
           <div class="resume-item">
-            <h3>Bachelor of Science in Computer Science</h3>
+            <h3>BA in Computer Science</h3>
             <p class="institution">Concordia College, Moorhead, MN</p>
             <p class="date">Expected May 2028</p>
-            <p class="details">Minor in Business | GPA: 3.7/4.0</p>
+            <p class="details">Cybersecurity | GPA: 3.7/4.0</p>
+            <h3>BA in Business</h3>
+            <p class="institution">Concordia College, Moorhead, MN</p>
+            <p class="details">Cybersecurity Operations | GPA: 4.0/4.0</p>
+            <p class="date">Expected May 2028</p>
           </div>
         </div>
 
@@ -180,7 +185,6 @@
           </a>
         </div>
       </div>
-
     </div>
   </body>
 </html>
