made the paragraph on the home page better

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -9,7 +9,6 @@
   </head>
   <body>
     <div class="mainpage">
-
       <nav class="slide-in-up">
         <div class="nav-container">
           <ul class="nav-menu">
@@ -23,7 +22,9 @@
               <a href="projects.html" class="nav-link">Projects</a>
             </li>
             <li class="nav-item">
-              <a href="project-details.html" class="nav-link">Project Details</a>
+              <a href="project-details.html" class="nav-link"
+                >Project Details</a
+              >
             </li>
             <li class="nav-item">
               <a href="contact.html" class="nav-link">Contact</a>
@@ -56,12 +57,13 @@
             </div>
             <h1>Damon Skappel</h1>
             <p class="hero-subtitle">
-              Computer Science Student & Aspiring Developer
+              Computer Science Student & Software Developer
             </p>
             <p class="hero-description">
-              Welcome to my personal website! I'm a student and developer
-              passionate about creating innovative solutions and learning new
-              technologies. Explore my projects, resume, and get in touch!
+              I'm Damon, a Computer Science student at Concordia College and
+              Salesforce Developer Intern at Marvin Windows. I build web
+              applications, work with enterprise software, and enjoy solving
+              problems through code.
             </p>
           </div>
           <div class="hero-buttons">
@@ -205,7 +207,6 @@
           <p class="quote-author">- Cory House</p>
         </div>
       </div>
-
     </div>
   </body>
 </html>
