Fix font consistency on biography page - remove conflicting Arial override, increase font sizes

--- a/index.html
+++ b/index.html
@@ -113,7 +113,10 @@
             </svg>
           </div>
           <h2>Student & Developer</h2>
-          <p>Building solutions with code and creativity</p>
+          <p>
+            Building projects using many languages and technologies. including
+            web development, game development, and data analytics.
+          </p>
         </div>
 
         <!-- Education Card - slides from right -->
@@ -139,8 +142,8 @@
             <div class="education-item">
               <div class="year">2024 - 2028</div>
               <div class="school">Concordia College</div>
-              <div class="degree">Computer Science Major</div>
-              <div class="detail">Business Minor - 3.7 GPA</div>
+              <div class="degree">Computer Science Major 3.7 GPA</div>
+              <div class="detail">Business Major - 4.0 GPA</div>
             </div>
             <div class="education-item">
               <div class="year">2020 - 2024</div>
