Update education: add Business double major and Cyber Security Operations minor

--- a/biography.html
+++ b/biography.html
@@ -53,7 +53,7 @@
           <p>
             Growing up in Warroad, Minnesota, I discovered my love for technology
             and problem-solving early on. This passion led me to pursue Computer Science
-            with a minor in Business, combining technical skills with business acumen.
+            with a double major in Business and a minor in Cyber Security Operations, combining technical skills with business acumen and security expertise.
           </p>
         </div>
 
@@ -91,9 +91,9 @@
           <div class="skill-group">
             <h4>Concordia College (2024 - 2028)</h4>
             <p>
-              Pursuing a Bachelor of Science in Computer Science with a Business minor.
-              Maintaining a 3.7 GPA while actively participating in coding projects and
-              internships.
+              Pursuing a double major in Computer Science and Business with a minor in
+              Cyber Security Operations. Maintaining a 3.7 GPA while actively participating
+              in coding projects and internships.
             </p>
           </div>
 
