--- a/index.html
+++ b/index.html
@@ -142,8 +142,8 @@
             <div class="education-item">
               <div class="year">2024 - 2028</div>
               <div class="school">Concordia College</div>
-              <div class="degree">Computer Science Major 3.7 GPA</div>
-              <div class="detail">Business Major - 4.0 GPA</div>
+              <div class="degree">Computer Science & Business Double Major</div>
+              <div class="detail">Cyber Security Operations Minor • 3.7 GPA</div>
             </div>
             <div class="education-item">
               <div class="year">2020 - 2024</div>
