--- a/resume.html
+++ b/resume.html
@@ -63,14 +63,10 @@
         <div class="grid-item resume-education slide-in-right delay-2">
           <h2>Education</h2>
           <div class="resume-item">
-            <h3>BA in Computer Science</h3>
+            <h3>B.A. Computer Science & Business (Double Major)</h3>
             <p class="institution">Concordia College, Moorhead, MN</p>
             <p class="date">Expected May 2028</p>
-            <p class="details">Cybersecurity | GPA: 3.7/4.0</p>
-            <h3>BA in Business</h3>
-            <p class="institution">Concordia College, Moorhead, MN</p>
-            <p class="details">Cybersecurity Operations | GPA: 4.0/4.0</p>
-            <p class="date">Expected May 2028</p>
+            <p class="details">Minor in Cyber Security Operations | GPA: 3.7/4.0</p>
           </div>
         </div>
 
