changed minor to concentration

--- a/biography.html
+++ b/biography.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -9,7 +9,6 @@
   </head>
   <body>
     <div class="mainpage">
-
       <nav class="slide-in-up">
         <div class="nav-container">
           <ul class="nav-menu">
@@ -23,7 +22,9 @@
               <a href="projects.html" class="nav-link">Projects</a>
             </li>
             <li class="nav-item">
-              <a href="project-details.html" class="nav-link">Project Details</a>
+              <a href="project-details.html" class="nav-link"
+                >Project Details</a
+              >
             </li>
             <li class="nav-item">
               <a href="contact.html" class="nav-link">Contact</a>
@@ -46,14 +47,17 @@
         <div class="grid-item resume-summary slide-in-left delay-2">
           <h2>My Story</h2>
           <p>
-            Hi, I'm Damon Skappel, a Computer Science student at Concordia College
-            in Moorhead, Minnesota. I'm passionate about creating innovative solutions
-            through code and learning new technologies every day.
+            Hi, I'm Damon Skappel, a Computer Science student at Concordia
+            College in Moorhead, Minnesota. I'm passionate about creating
+            innovative solutions through code and learning new technologies
+            every day.
           </p>
           <p>
-            Growing up in Warroad, Minnesota, I discovered my love for technology
-            and problem-solving early on. This passion led me to pursue Computer Science
-            with a double major in Business and a minor in Cyber Security Operations, combining technical skills with business acumen and security expertise.
+            Growing up in Warroad, Minnesota, I discovered my love for
+            technology and problem-solving early on. This passion led me to
+            pursue Computer Science with a double major in Business and a
+            concentration in Cyber Security Operations, combining technical
+            skills with business acumen and security expertise.
           </p>
         </div>
 
@@ -63,9 +67,9 @@
           <div class="resume-item">
             <h3>IT Intern at Marvin Windows</h3>
             <p>
-              Currently, I'm working as an IT Intern at Marvin Windows where I write
-              Apex code for digital team initiatives and develop Lightning components
-              for Salesforce Cloud applications.
+              Currently, I'm working as an IT Intern at Marvin Windows where I
+              write Apex code for digital team initiatives and develop Lightning
+              components for Salesforce Cloud applications.
             </p>
           </div>
         </div>
@@ -73,14 +77,24 @@
         <!-- Interests & Hobbies -->
         <div class="grid-item resume-experience slide-in-left delay-3">
           <h2>Beyond the Code</h2>
-          <p>
-            When I'm not coding, you'll find me pursuing my other passions:
-          </p>
+          <p>When I'm not coding, you'll find me pursuing my other passions:</p>
           <ul>
-            <li><strong>Fishing:</strong> There's nothing better than a day on the water</li>
-            <li><strong>Community Service:</strong> Completed 100+ hours helping my community</li>
-            <li><strong>Hockey:</strong> Growing up in Minnesota, hockey is in my blood</li>
-            <li><strong>Continuous Learning:</strong> Always exploring new technologies and frameworks</li>
+            <li>
+              <strong>Fishing:</strong> There's nothing better than a day on the
+              water
+            </li>
+            <li>
+              <strong>Community Service:</strong> Completed 100+ hours helping
+              my community
+            </li>
+            <li>
+              <strong>Hockey:</strong> Growing up in Minnesota, hockey is in my
+              blood
+            </li>
+            <li>
+              <strong>Continuous Learning:</strong> Always exploring new
+              technologies and frameworks
+            </li>
           </ul>
         </div>
 
@@ -91,9 +105,9 @@
           <div class="skill-group">
             <h4>Concordia College (2024 - 2028)</h4>
             <p>
-              Pursuing a double major in Computer Science and Business with a minor in
-              Cyber Security Operations. Maintaining a 3.7 GPA while actively participating
-              in coding projects and internships.
+              Pursuing a double major in Computer Science and Business with a
+              minor in Cyber Security Operations. Maintaining a 3.7 GPA while
+              actively participating in coding projects and internships.
             </p>
           </div>
 
@@ -110,19 +124,23 @@
         <div class="grid-item resume-projects slide-in-left delay-4">
           <h2>Goals & Aspirations</h2>
           <p>
-            My goal is to become a well-rounded software developer who can bridge
-            the gap between technical solutions and business needs. I'm particularly
-            interested in:
+            My goal is to become a well-rounded software developer who can
+            bridge the gap between technical solutions and business needs. I'm
+            particularly interested in:
           </p>
           <ul>
             <li>Full-stack web development</li>
             <li>Cloud computing and Salesforce development</li>
-            <li>Creating user-friendly applications that solve real-world problems</li>
-            <li>Continuous learning and staying current with emerging technologies</li>
+            <li>
+              Creating user-friendly applications that solve real-world problems
+            </li>
+            <li>
+              Continuous learning and staying current with emerging technologies
+            </li>
           </ul>
           <p>
-            I'm always open to new opportunities, collaborations, and conversations
-            about technology. Feel free to reach out!
+            I'm always open to new opportunities, collaborations, and
+            conversations about technology. Feel free to reach out!
           </p>
         </div>
 
@@ -138,14 +156,15 @@
               stroke="currentColor"
               stroke-width="2"
             >
-              <path d="M4 4h16c1.1 0 2 .9 2 2v12c0 1.1-.9 2-2 2H4c-1.1 0-2-.9-2-2V6c0-1.1.9-2 2-2z"></path>
+              <path
+                d="M4 4h16c1.1 0 2 .9 2 2v12c0 1.1-.9 2-2 2H4c-1.1 0-2-.9-2-2V6c0-1.1.9-2 2-2z"
+              ></path>
               <polyline points="22,6 12,13 2,6"></polyline>
             </svg>
             Get In Touch
           </a>
         </div>
       </div>
-
     </div>
   </body>
 </html>
