--- a/index.html
+++ b/index.html
@@ -143,7 +143,9 @@
               <div class="year">2024 - 2028</div>
               <div class="school">Concordia College</div>
               <div class="degree">Computer Science & Business Double Major</div>
-              <div class="detail">Cyber Security Operations Minor • 3.7 GPA</div>
+              <div class="detail">
+                Cyber Security Operations concentration • 3.7 GPA
+              </div>
             </div>
             <div class="education-item">
               <div class="year">2020 - 2024</div>
