--- a/resume.html
+++ b/resume.html
@@ -66,7 +66,9 @@
             <h3>B.A. Computer Science & Business (Double Major)</h3>
             <p class="institution">Concordia College, Moorhead, MN</p>
             <p class="date">Expected May 2028</p>
-            <p class="details">Minor in Cyber Security Operations | GPA: 3.7/4.0</p>
+            <p class="details">
+              Concentration in Cyber Security Operations | GPA: 3.7/4.0
+            </p>
           </div>
         </div>
 
