changed some wording in the bio page to be more correct

--- a/biography.html
+++ b/biography.html
@@ -80,16 +80,16 @@
           <p>When I'm not coding, you'll find me pursuing my other passions:</p>
           <ul>
             <li>
-              <strong>Fishing:</strong> There's nothing better than a day on the
-              water
+              <strong>Fishing:</strong> Fishing on Lake of the Woods is my
+              favorite way to relax.
             </li>
             <li>
               <strong>Community Service:</strong> Completed 100+ hours helping
               my community
             </li>
             <li>
-              <strong>Hockey:</strong> Growing up in Minnesota, hockey is in my
-              blood
+              <strong>Hockey:</strong> I started skating at age 2 and played
+              varsity hockey in high school.
             </li>
             <li>
               <strong>Continuous Learning:</strong> Always exploring new
@@ -106,8 +106,8 @@
             <h4>Concordia College (2024 - 2028)</h4>
             <p>
               Pursuing a double major in Computer Science and Business with a
-              minor in Cyber Security Operations. Maintaining a 3.7 GPA while
-              actively participating in coding projects and internships.
+              concentration in Cyber Security Operations. Maintaining a 3.7 GPA
+              while actively participating in coding projects and internships.
             </p>
           </div>
 
