consolidate files to root and remove deploy folder

--- a/project-details.html
+++ b/project-details.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -9,7 +9,6 @@
   </head>
   <body>
     <div class="mainpage">
-
       <nav class="slide-in-up">
         <div class="nav-container">
           <ul class="nav-menu">
@@ -23,13 +22,18 @@
               <a href="projects.html" class="nav-link">Projects</a>
             </li>
             <li class="nav-item">
-              <a href="project-details.html" class="nav-link active">Project Details</a>
+              <a href="project-details.html" class="nav-link active"
+                >Project Details</a
+              >
             </li>
             <li class="nav-item">
               <a href="contact.html" class="nav-link">Contact</a>
             </li>
             <li class="nav-item">
               <a href="resume.html" class="nav-link">Resume</a>
+            </li>
+            <li class="nav-item">
+              <a href="certs.html" class="nav-link">Certifications</a>
             </li>
           </ul>
         </div>
@@ -197,7 +201,6 @@
           </div>
         </div>
       </div>
-
     </div>
   </body>
 </html>
