--- a/resume.html
+++ b/resume.html
@@ -32,6 +32,9 @@
             <li class="nav-item">
               <a href="resume.html" class="nav-link active">Resume</a>
             </li>
+            <li class="nav-item">
+              <a href="certs.html" class="nav-link">Certifications</a>
+            </li>
           </ul>
         </div>
       </nav>
