changed naming so css gets applied to certs.html

--- a/certs.html
+++ b/certs.html
@@ -49,8 +49,8 @@
 
         <div class="certs-grid">
           <!-- Example Cert 1: Completed -->
-          <div class="cert-card cert-completed slide-in-left delay-2">
-            <div class="cert-status-badge status-inprogress">
+          <div class="cert-card cert-in-progress slide-in-left delay-2">
+            <div class="cert-status-badge status-in-progress">
               <svg
                 xmlns="http://www.w3.org/2000/svg"
                 width="16"
@@ -87,8 +87,8 @@
           </div>
 
           <!-- Example Cert 3: Planned -->
-          <div class="cert-card cert- slide-in-right delay-2">
-            <div class="cert-status-badge status-inprogress">
+          <div class="cert-card cert-in-progress slide-in-right delay-2">
+            <div class="cert-status-badge status-in-progress">
               <svg
                 xmlns="http://www.w3.org/2000/svg"
                 width="16"
