Changed the google cyber cert to completed from in progress

--- a/certs.html
+++ b/certs.html
@@ -49,8 +49,8 @@
 
         <div class="certs-grid">
           <!-- Example Cert 1: Completed -->
-          <div class="cert-card cert-in-progress slide-in-left delay-2">
-            <div class="cert-status-badge status-in-progress">
+          <div class="cert-card cert-completed slide-in-left delay-2">
+            <div class="cert-status-badge status-completed">
               <svg
                 xmlns="http://www.w3.org/2000/svg"
                 width="16"
@@ -62,7 +62,7 @@
               >
                 <polyline points="20 6 9 17 4 12"></polyline>
               </svg>
-              <span>In Progress</span>
+              <span>Completed</span>
             </div>
 
             <div class="cert-image">
