--- a/index.html
+++ b/index.html
@@ -59,14 +59,11 @@
               <span>Available for Opportunities</span>
             </div>
             <h1>Damon Skappel</h1>
-            <p class="hero-subtitle">
-              Computer Science Student & Software Developer
-            </p>
+            <p class="hero-subtitle">Computer Science and Business student</p>
             <p class="hero-description">
-              I'm Damon, a Computer Science student at Concordia College and
-              Salesforce Developer Intern at Marvin Windows. I build web
-              applications, work with enterprise software, and enjoy solving
-              problems through code.
+              I'm Damon, a Computer Science student at Concordia College and IT
+              Intern at Marvin Windows. I build web applications, work with
+              enterprise software, and enjoy being with friends
             </p>
           </div>
           <div class="hero-buttons">
@@ -118,7 +115,8 @@
           <h2>Student & Developer</h2>
           <p>
             Building projects using many languages and technologies. including
-            web development, game development, and data analytics.
+            web development, game development, cybersecurity, and data
+            analytics.
           </p>
         </div>
 
@@ -145,10 +143,10 @@
             <div class="education-item">
               <div class="year">2024 - 2028</div>
               <div class="school">Concordia College</div>
-              <div class="degree">Computer Science & Business Double Major</div>
-              <div class="detail">
-                Cyber Security Operations concentration • 3.7 GPA
+              <div class="degree">
+                Computer Science & Business-Cybersecuity Operations Double Major
               </div>
+              <div class="detail">3.8 GPA</div>
             </div>
             <div class="education-item">
               <div class="year">2020 - 2024</div>
